2012-03-05  Richard Henderson  <rth@redhat.com>

	PR target/52481
	* config/m68k/sync.md (atomic_test_and_set): Use expand_simple_unop
	instead of calling negqi2 directly.

2012-03-05  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* config/mips/iris6.h [!USED_FOR_TARGET] (long_intmax): Declare.
	(INTMAX_TYPE): Use it.
	(UINTMAX_TYPE): Likewise.
	(SUBTARGET_OVERRIDE_OPTIONS): Define.
	(irix6_c_common_override_options): Declare.
	(C_COMMON_OVERRIDE_OPTIONS): Define.
	* config/mips/mips.c [TARGET_IRIX6] (long_intmax): Define.
	* config/mips/irix6-c.c: New file.
	* config/mips/t-irix6 (irix6-c.o): New target.
	* config.gcc (mips-sgi-irix6.5): Set c_target_objs,
	cxx_target_objs.

2012-03-02  Richard Henderson  <rth@redhat.com>

	* optabs.c (expand_atomic_test_and_set): Honor
	atomic_test_and_set_trueval even when atomic_test_and_set
	optab is not in use.

2012-03-02  Peter Bergner  <bergner@vnet.ibm.com>

	Backport from mainline
	2012-03-02  Peter Bergner  <bergner@vnet.ibm.com>

	* config/rs6000/vsx.md (vsx_set_<mode>): Reorder operands.

2012-03-02  Richard Guenther  <rguenther@suse.de>

	* DEV-PHASE: Set to prerelease.

2012-03-01  Richard Earnshaw  <rearnsha@arm.com>

	* config.gcc (obsolete): Add all ARM targets using the FPA.
	(with_fpu): Obsolete selection of the FPA or Maverick on ARM.
	* doc/install.texi: Avoid references to obsolete ARM ports.

2012-03-01  Joern Rennecke  <joern.rennecke@embecosm.com>

	* config/epiphany/epiphany.md (movmisalign<mode>): New patterns.

2012-03-01  Jeremy Bennett  <jeremy.bennett@embecosm.com>
	    Joern Rennecke  <joern.rennecke@embecosm.com>

	* doc/extend.texi: Expand and update information on interrupt
	attribute for Epiphany.

2012-03-01  Oleg Endo  <olegendo@gcc.gnu.org>

	* config/sh/sh-protos.h: Update copyright notice dates.
	* config/sh/sh.h: Likewise.
	* config/sh/sh.md: Likewise.
	* config/sh/constraints.md: Likewise.
	* config/sh/predicates.md: Likewise.

2012-03-01  Oleg Endo  <olegendo@gcc.gnu.org>
